--- a/results.html
+++ b/results.html
@@ -14,15 +14,24 @@
   </main>
 
   <script type="module">
+    import { calculateResults } from './js/calculateResults.js';
+    import scales from './data/scales.json' assert { type: 'json' };
+
     const saved = localStorage.getItem('pdqResultsTemp');
     if (!saved) {
       alert('Нет данных для отображения результатов');
       window.location.href = 'index.html';
     }
-    const results = JSON.parse(saved);
+
+    const answers = JSON.parse(saved);
+    const results = calculateResults(answers);
 
     const labels = Object.keys(results);
-    const data = Object.values(results);
+    const data = Object.values(results).map(r => r.score);
+    const colors = Object.values(results).map(r => r.color);
+    const thresholds = Object.values(results).map(r => r.threshold);
+
+    const maxThreshold = Math.max(...thresholds);
 
     new Chart(document.getElementById('resultsChart'), {
       type: 'radar',
@@ -31,24 +40,37 @@
         datasets: [{
           label: 'Ваш профиль PDQ-4',
           data,
-          fill: true,
-          borderColor: '#007aff',
-          backgroundColor: 'rgba(0,122,255,0.1)',
-          pointBackgroundColor: '#007aff',
-          borderWidth: 2
+          backgroundColor: colors,
+          borderColor: '#444',
+          borderWidth: 2,
+          pointBackgroundColor: '#444'
         }]
       },
       options: {
         scales: {
           r: {
             min: 0,
-            suggestedMax: 8,
-            ticks: { stepSize: 1, color: '#444' },
-            grid: { color: '#ddd' },
-            angleLines: { color: '#eee' }
+            max: maxThreshold,
+            ticks: {
+              stepSize: 1,
+              color: '#666'
+            },
+            grid: {
+              color: ctx => {
+                const tickValue = ctx.tick.value;
+                return thresholds.includes(tickValue) ? '#ff0000' : '#ccc';
+              }
+            },
+            angleLines: { color: '#ddd' },
+            pointLabels: {
+              font: { size: 12 },
+              color: '#222'
+            }
           }
         },
-        plugins: { legend: { display: false } }
+        plugins: {
+          legend: { display: false }
+        }
       }
     });
   </script>
