--- a/test.html
+++ b/test.html
@@ -1,56 +1,76 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>PDQ-4 Тест</title>
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PDQ-4 — Тест</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <main class="container">
     <h1>PDQ-4</h1>
-    <p>Ответьте на вопросы «Да» или «Нет»</p>
+    <p id="progress"></p>
+    <h2 id="questionText"></h2>
 
-    <div id="questions"></div>
+    <div class="answers">
+      <button class="answer-btn yes" id="yesButton">Да</button>
+      <button class="answer-btn no" id="noButton">Нет</button>
+    </div>
 
-    <button id="finishButton" class="button">Завершить тест</button>
+    <div id="cityGroup" class="meta"></div>
   </main>
 
   <script type="module">
-    import { calculateResults } from './js/calculateResults.js';
     import questions from './data/questions.json' assert { type: 'json' };
+    import { calculateResults } from './js/calculateResults.js';
 
-    const container = document.getElementById('questions');
+    // Загружаем данные пользователя (город, группа)
+    const city = localStorage.getItem('city') || '—';
+    const group = localStorage.getItem('group') || '—';
+    document.getElementById('cityGroup').innerText = `${city} — Группа ${group}`;
 
-    // Отображаем вопросы
-    questions.slice(0, 5).forEach(q => {  // временно только 5 для примера
-      const div = document.createElement('div');
-      div.className = 'question';
-      div.innerHTML = `
-        <p>${q.id}. ${q.text}</p>
-        <label><input type="radio" name="q${q.id}" value="yes"> Да</label>
-        <label><input type="radio" name="q${q.id}" value="no"> Нет</label>
-      `;
-      container.appendChild(div);
-    });
+    const progress = document.getElementById('progress');
+    const questionText = document.getElementById('questionText');
+    const yesBtn = document.getElementById('yesButton');
+    const noBtn = document.getElementById('noButton');
 
-    // Собираем ответы
-    function collectAnswers() {
-      const answers = {};
-      questions.forEach(q => {
-        const val = document.querySelector(`input[name="q${q.id}"]:checked`);
-        answers[q.id] = val?.value === 'yes';
-      });
-      return answers;
+    let current = 0;
+    const answers = {};
+
+    function showQuestion() {
+      const q = questions[current];
+      progress.textContent = `Вопрос ${q.id} / ${questions.length}`;
+      questionText.textContent = q.text;
     }
 
-    // Обработка завершения теста
-    document.getElementById('finishButton').addEventListener('click', () => {
-      const answers = collectAnswers();
-      const results = calculateResults(answers);
+    function handleAnswer(isYes) {
+      const q = questions[current];
+      answers[q.id] = isYes;
 
-      localStorage.setItem('pdqResultsTemp', JSON.stringify(results));
-      window.location.href = 'results.html';
-    });
+      current++;
+      if (current < questions.length) {
+        showQuestion();
+      } else {
+        showResultButton();
+      }
+    }
+
+    function showResultButton() {
+      document.querySelector('.answers').innerHTML = `
+        <button class="result-btn" id="showResult">Результат теста</button>
+      `;
+      document.getElementById('showResult').addEventListener('click', () => {
+        localStorage.setItem('pdqResultsTemp', JSON.stringify(answers));
+        const results = calculateResults(answers);
+        localStorage.setItem('pdqResultsFinal', JSON.stringify(results));
+        window.location.href = 'results.html';
+      });
+    }
+
+    yesBtn.addEventListener('click', () => handleAnswer(true));
+    noBtn.addEventListener('click', () => handleAnswer(false));
+
+    showQuestion();
   </script>
 </body>
 </html>
