--- a/results.html
+++ b/results.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Результаты PDQ-4</title>
   <link rel="stylesheet" href="css/style.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -10,22 +11,19 @@
   <main class="container">
     <h1>Ваш профиль PDQ-4</h1>
     <canvas id="resultsChart" width="400" height="400"></canvas>
-    <button class="button" onclick="window.location.href='index.html'">На главную</button>
+    <button class="result-btn" onclick="window.location.href='index.html'">На главную</button>
   </main>
 
   <script type="module">
     import { calculateResults } from './js/calculateResults.js';
-    import scales from './data/scales.json' assert { type: 'json' };
 
-    const saved = localStorage.getItem('pdqResultsTemp');
-    if (!saved) {
+    const answers = JSON.parse(localStorage.getItem('pdqResultsTemp'));
+    if (!answers) {
       alert('Нет данных для отображения результатов');
       window.location.href = 'index.html';
     }
 
-    const answers = JSON.parse(saved);
     const results = calculateResults(answers);
-
     const labels = Object.keys(results);
     const data = Object.values(results).map(r => r.score);
     const colors = Object.values(results).map(r => r.color);
@@ -38,7 +36,6 @@
       data: {
         labels,
         datasets: [{
-          label: 'Ваш профиль PDQ-4',
           data,
           backgroundColor: colors,
           borderColor: '#444',
@@ -51,26 +48,15 @@
           r: {
             min: 0,
             max: maxThreshold,
-            ticks: {
-              stepSize: 1,
-              color: '#666'
-            },
+            ticks: { stepSize: 1, color: '#666' },
             grid: {
-              color: ctx => {
-                const tickValue = ctx.tick.value;
-                return thresholds.includes(tickValue) ? '#ff0000' : '#ccc';
-              }
+              color: ctx => thresholds.includes(ctx.tick.value) ? '#ff0000' : '#ccc'
             },
             angleLines: { color: '#ddd' },
-            pointLabels: {
-              font: { size: 12 },
-              color: '#222'
-            }
+            pointLabels: { font: { size: 12 }, color: '#222' }
           }
         },
-        plugins: {
-          legend: { display: false }
-        }
+        plugins: { legend: { display: false } }
       }
     });
   </script>
