--- a/results.html
+++ b/results.html
@@ -48,7 +48,7 @@
     }
     .bar {
       position: relative;
-      height: 20px;
+      height: 22px;
       background: #eee;
       border-radius: 10px;
       overflow: hidden;
@@ -57,8 +57,17 @@
       content: "";
       position: absolute;
       top: 0;
+      left: 0;
+      right: 0;
       bottom: 0;
-      left: calc(var(--th) * (100% / var(--th)) / var(--th)); /* placeholder */
+      background-image: repeating-linear-gradient(
+        to right,
+        rgba(0,0,0,0.15) 0,
+        rgba(0,0,0,0.15) 1px,
+        transparent 1px,
+        transparent calc(100% / var(--th))
+      );
+      pointer-events: none;
     }
     .fill {
       height: 100%;
@@ -142,8 +151,8 @@
             <div class="label">${LABEL_MAP[k] || k}</div>
             <div class="bar" style="--th:${r.threshold};">
               <div class="fill" style="width:${w}%; background:${c};"></div>
-              <div class="value">${r.score} / ${r.threshold}</div>
             </div>
+            <div class="value">${r.score} / ${r.threshold}</div>
           </div>`;
       }
 
